--- a/Dockerfile.arm64
+++ b/Dockerfile.arm64
@@ -20,7 +20,7 @@ FROM arm64v8/golang:1.15-alpine as builder
 
 ARG DEP_VERSION="0.5.3"
 RUN apk add --no-cache bash git
-ADD https://github.com/golang/dep/releases/download/v${DEP_VERSION}/dep-linux-amd64 /usr/bin/dep
+ADD https://github.com/golang/dep/releases/download/v${DEP_VERSION}/dep-linux-arm64 /usr/bin/dep
 RUN chmod +x /usr/bin/dep
 
 WORKDIR ${GOPATH}/src/github.com/GoogleCloudPlatform/spark-on-k8s-operator
