--- a/examples/spark-pi.yaml
+++ b/examples/spark-pi.yaml
@@ -21,7 +21,7 @@ metadata:
 spec:
   type: Scala
   mode: cluster
-  image: "registry.aliyuncs.com/acs/spark-pi:ack-2.4.5-latest"
+  image: "registry-vpc.cn-hangzhou.aliyuncs.com/acs/spark-pi:ack-2.4.5-latest"
   imagePullPolicy: Always
   mainClass: org.apache.spark.examples.SparkPi
   mainApplicationFile: "local:///opt/spark/examples/jars/spark-examples_2.11-2.4.5.jar"
@@ -50,5 +50,14 @@ spec:
     labels:
       version: 2.4.5
     volumeMounts:
-      - name: "test-volume"
+      - name: "www"
         mountPath: "/tmp"
+  volumeClaimTemplates:
+  - metadata:
+      name: www
+    spec:
+      accessModes: [ "ReadWriteOnce" ]
+      storageClassName: "alicloud-disk-essd"
+      resources:
+        requests:
+          storage: 100Gi
