--- a/manifest/spark-operator-rbac.yaml
+++ b/manifest/spark-operator-rbac.yaml
@@ -31,6 +31,9 @@ metadata:
   name: sparkoperator
 rules:
 - apiGroups: [""]
+  resources: ["persistentvolumeclaims"]
+  verbs: ["create", "list", "get", "watch", "patch", "update"]
+- apiGroups: [""]
   resources: ["pods"]
   verbs: ["*"]
 - apiGroups: [""]
