--- a/examples/spark-pi-pvc.yaml
+++ b/examples/spark-pi-pvc.yaml
@@ -35,9 +35,24 @@ spec:
     labels:
       version: 2.4.5
     serviceAccount: spark
+    volumeMounts:
+      - name: "www"
+        mountPath: "/tmp"
   executor:
     cores: 1
     instances: 1
     memory: "512m"
     labels:
       version: 2.4.5
+    volumeMounts:
+      - name: "www"
+        mountPath: "/tmp"
+  volumeClaimTemplates:
+  - metadata:
+      name: www
+    spec:
+      accessModes: [ "ReadWriteOnce" ]
+      storageClassName: "alicloud-disk-essd"
+      resources:
+        requests:
+          storage: 100Gi
