--- a/examples/spark-pi.yaml
+++ b/examples/spark-pi.yaml
@@ -21,10 +21,10 @@ metadata:
 spec:
   type: Scala
   mode: cluster
-  image: "registry.ap-southeast-1.aliyuncs.com/acs/spark:ack-2.4.5-4534784-test"
+  image: "registry.cn-hangzhou.aliyuncs.com/ringtail/spark:v3.1.1"
   imagePullPolicy: Always
   mainClass: org.apache.spark.examples.SparkPi
-  mainApplicationFile: "local:///opt/spark/examples/jars/spark-examples_2.12-3.0.0.jar"
+  mainApplicationFile: "local:///opt/spark/examples/jars/spark-examples_2.12-3.1.1.jar"
   sparkVersion: "3.0.0"
   restartPolicy:
     type: Never
@@ -32,6 +32,9 @@ spec:
     cores: 1
     coreLimit: "1200m"
     memory: "512m"
+    customResources:
+      limits:
+        ephemeral-storage: 100Mi
     labels:
       version: 3.0.0
     serviceAccount: spark
@@ -41,3 +44,6 @@ spec:
     memory: "512m"
     labels:
       version: 3.0.0
+    customResources:
+      limits:
+        ephemeral-storage: 100Mi
