--- a/Dockerfile.arm64
+++ b/Dockerfile.arm64
@@ -18,6 +18,8 @@ ARG SPARK_IMAGE=registry.ap-southeast-1.aliyuncs.com/acs/spark:ack-2.4.5-latest
 
 FROM arm64v8/golang:1.15-alpine as builder
 
+WORKDIR /workspace
+
 ARG DEP_VERSION="0.5.3"
 RUN apk add --no-cache bash git
 
