support hostAliases feature in spark operator 3

--- a/manifest/crds/sparkoperator.k8s.io_scheduledsparkapplications.yaml
+++ b/manifest/crds/sparkoperator.k8s.io_scheduledsparkapplications.yaml
@@ -535,6 +535,17 @@ spec:
                             - name
                             - quantity
                           type: object
+                        hostAliases:
+                          items:
+                            properties:
+                              hostnames:
+                                items:
+                                  type: string
+                                type: array
+                              ip:
+                                type: string
+                            type: object
+                          type: array
                         hostNetwork:
                           type: boolean
                         image:
@@ -2359,6 +2370,17 @@ spec:
                             - name
                             - quantity
                           type: object
+                        hostAliases:
+                          items:
+                            properties:
+                              hostnames:
+                                items:
+                                  type: string
+                                type: array
+                              ip:
+                                type: string
+                            type: object
+                          type: array
                         hostNetwork:
                           type: boolean
                         image:
