--- a/manifest/crds/sparkoperator.k8s.io_sparkapplications.yaml
+++ b/manifest/crds/sparkoperator.k8s.io_sparkapplications.yaml
@@ -521,6 +521,17 @@ spec:
                         - name
                         - quantity
                       type: object
+                    hostAliases:
+                      items:
+                        properties:
+                          hostnames:
+                            items:
+                              type: string
+                            type: array
+                          ip:
+                            type: string
+                        type: object
+                      type: array
                     hostNetwork:
                       type: boolean
                     image:
@@ -2345,6 +2356,17 @@ spec:
                         - name
                         - quantity
                       type: object
+                    hostAliases:
+                      items:
+                        properties:
+                          hostnames:
+                            items:
+                              type: string
+                            type: array
+                          ip:
+                            type: string
+                        type: object
+                      type: array
                     hostNetwork:
                       type: boolean
                     image:
